feat: expose guild data API

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,19 @@ CLIENT_ID=your_bot_application_id
 GUILD_ID=your_discord_server_guild_id
 VERIFY_ROLE_ID=your_verification_role_id
 
-# Database Configuration
-DB_HOST=your_database_host
-DB_USER=your_database_username
-DB_PASSWORD=your_database_password
-DB_NAME=your_database_name
-DB_PORT=3306
+# API Configuration
+PORT=3001
+
+# FiveM Database Configuration
+FIVEM_DB_HOST=your_fivem_database_host
+FIVEM_DB_USER=your_fivem_database_username
+FIVEM_DB_PASSWORD=your_fivem_database_password
+FIVEM_DB_NAME=your_fivem_database_name
+FIVEM_DB_PORT=3306
+
+# Bot Database Configuration
+BOT_DB_HOST=your_bot_database_host
+BOT_DB_USER=your_bot_database_username
+BOT_DB_PASSWORD=your_bot_database_password
+BOT_DB_NAME=your_bot_database_name
+BOT_DB_PORT=3306
