--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
+    "express": "^4.21.2",
     "mysql2": "^3.14.3"
   }
 }
