--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
-    "mysql2": "^3.14.3"
+    "mysql2": "^3.14.3",
+    "node-fetch": "^2.7.0"
   }
 }
